assets/css/custom.css
:root {
  --c-primary: #ee4c2c;
  --c-secondary: #eaa700;
}
body {
  font-family: Inter, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif !important;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}
h1,
h2,
h3,
h4,
h5,
h6 {
  font-family: Inter, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif !important;
}
pre,
code {
  font-family: Monaco, Menlo, Consolas, "Liberation Mono", monospace !important;
}
a:hover {
  color: var(--c-primary);
}
/* img width and height 50px */
.navbar.is-fresh .navbar-brand img,
footer.footer-dark .footer-logo img {
  max-height: 50px !important;
  height: 50px;
  width: 50px;
}
.hero-body {
  padding: 1rem 1.5rem;
}
.navbar.is-fresh {
  border-bottom: 1px solid #eee;
  position: fixed;
  top: 0;
  right: 0;
  left: 0;
}
/* top left nav img */
.navbar-item img {
  margin: 0 0.5rem;
}
/* set auto so that it won't take full view height */
.hero.is-fullheight {
  min-height: auto;
  margin-top: 4rem;
}
.hero-body .title,
.hero-body .subtitle,
.button.cta,
.title-wrapper .title,
.title-wrapper .subtitle {
  font-family: Oxygen, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
}
.feature-card {
  height: 350px;
}
.post-image {
  text-align: center;
}
.post-image img {
  margin-top: 1rem;
  border-radius: 0.5rem;
}
.section {
  margin-top: 4rem;
}
.section-feature-grey {
  margin-top: 0;
}
.section .sidebar-on {
  max-width: 50rem;
  margin: 0 auto;
}
/* left sidebar */
.sidebar {
  background-color: #fff;
  border-right: 1px solid #eaecef;
  top: 4rem;
  width: 16.4rem;
  transform: translateX(0%);
  z-index: 95;
  height: auto;
  bottom: 0;
  padding-bottom: 2rem;
}
.sidebar .sidebar-header {
  border-bottom: 0;
}
.sidebar .sidebar-header svg {
  stroke: #222;
}
.sidebar .sidebar-header .text {
  font-size: 1.5rem;
  font-weight: 600;
  flex: 1 1 0%;
  text-align: center;
}
.sidebar.is-active {
  transform: translateX(0%);
}
.sidebar .inner a {
  padding: .35rem 1rem .35rem 2rem;
  border-left: 4px solid transparent;
  display: block;
}
.sidebar .inner .active {
  border-left-color: var(--c-primary);
  color: var(--c-primary);
}
/* indent h1 h2 h3 ... */
.sidebar li > ul {
  padding-left: 1rem;
  font-size: .875em;
}
.toc {
  font-size: 1.5rem;
  line-height: 2rem;
  font-weight: 600;
}
#TableOfContents {
  padding-left: 1rem;
  font-size: .9em;
}
/* toc end */
/* blog section */
.section.main {
  padding-top: 0;
}
.featured-post {
  text-align: center;
  padding: 1.5rem 1rem;
  font-size: 1.25rem;
  line-height: 1.5rem;
  background-color: var(--c-primary);
  width: 100vw;
}
.featured-post a {
  color: #fff;
  font-weight: 600;
}
.featured-post a:hover {
  text-decoration: underline;
}
/* twitter tweets */
#twitter-widget-0 {
  display: none !important;
}
.twitter-tweets {
  margin: 0 auto 3rem;
}
.tweets-wrapper {
  display: flex;
}
.tweet-author {
  margin-top: 1rem;
}
.col-md-4 {
  margin: 1rem;
  width: 33%;
  padding: 1rem;
  border-radius: 8px;
  box-shadow: 0 0 12px rgba(0, 0, 0, .1);
}
.col-md-4 .Emoji {
  /* these emoji needs to adjust with font size */
  /* if changed */
  width: 1rem;
  height: 1rem;
}
/* twitter tweets end */
/* home page logo */
.title-and-img {
  display: flex;
}
.button.primary-btn {
  background-color: var(--c-secondary);
  border-color: var(--c-secondary);
}
/* ecosystem */
.media-content {
  padding: 1rem;
  border-radius: 4px;
  border: 1px solid #ccc;
  height: 100%;
}
.media.icon-box .media-content:hover .content p .icon-box-title {
  color: var(--c-primary);
}
.ecosystem-link {
  padding: .5rem 1rem;
  background: #fff;
  position: absolute;
  top: 0;
  right: 0;
}
/* links in table */
table a {
  text-decoration: underline;
}
/* download link tutorials */
.downloads {
  padding-bottom: 1rem;
  display: -webkit-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -ms-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  flex-wrap: wrap;
}
.downloads a {
  padding: 4px 8px;
  margin: 0 8px;
}
.downloads img {
  vertical-align: middle;
}
/* Previous and next links */
.prev-n-next {
  display: flex;
  justify-content: space-between;
  padding-top: 1rem;
  border-top: 1px solid rgba(60, 60, 67, 0.12);
}
.prev-n-next .prev, .next {
  display: flex;
  flex-shrink: 0;
  width: 50%;
}
.prev-n-next .prev {
  justify-content: flex-start;
  padding-right: 12px;
}
.prev-n-next .next {
  justify-content: flex-end;
  padding-left: 12px;
}
.prev-n-next .link {
  display: inline-flex;
  align-items: center;
  max-width: 100%;
  font-size: 1rem;
  font-weight: 500;
}
.prev-n-next .text {
  display: block;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}
.prev-n-next .iconify {
  width: 16px;
  height: 16px;
  display: block;
  flex-shrink: 0;
}
.prev-n-next .icon-prev {
  margin-right: 8px;
}
.prev-n-next .icon-next {
  margin-left: 8px;
}
/* admonitions */
.admonition p {
  margin: 1rem 0;
}
.admonition-title {
  font-weight: 600;
}
.admonition.tip, .admonition.warning, .admonition.danger {
  border-left: .5rem solid;
  margin: 1rem 0;
  padding: .1rem 1.5rem;
  overflow-x: auto;
  border-radius: 4px;
}
.admonition.tip {
  border-color: #14b8a6;
  background-color: #f6f6f6;
}
.admonition.warning {
  border-color: #eab308;
  background-color: #fef08a;
  color: #a16207;
}
.admonition.danger {
  border-color: #ef4444;
  background-color: #fecaca;
  color: #b91c1c;
}
.admonition.details {
  border-radius: 4px;
  margin: 1.5rem 0;
  padding: 1rem;
  background-color: #eee;
}
.sr-only {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clear: rect(0,0,0,0);
  white-space: nowrap;
  border-width: 0;
}
.tag:not(body) {
  font-size: 0.85rem;
  background: var(--c-primary);
  color: #fff;
}
.tag a {
  color: #fff;
}
/* header anchors */
h2:hover .header-anchor,
h3:hover .header-anchor {
  opacity: 1;
  color: var(--c-primary);
}
.header-anchor {
  padding-right: .25em;
  margin-left: -.85em;
  font-size: .85em;
  opacity: 0;
}
.header-anchor:hover {
  opacity: 1;
}
.content pre {
  padding: 1.25rem .75rem;
}
.columns {
  flex-wrap: wrap;
}
.media {
  width: 100%;
  padding: 1rem;
  margin: 0 !important;
}
.title-2 {
  font-size: 1.25rem;
  font-weight: 600;
  color: #eee;
}
.docs {
  display: flex;
  text-align: center;
  flex-wrap: wrap;
  color: #aaa;
}
.docs .admonition {
  width: 100%;
}
.docs .admonition {
  padding: .5rem;
}
.docs .admonition a {
  color: var(--c-primary);
}
footer.footer-dark {
  background: #222;
}
@media screen and (min-width: 720px) {
  .media, .docs .admonition {
    width: calc(100% / 3);
  }
}
/* mobile */
@media screen and (max-width: 768px) {
  .image.is-4by3 {
    width: 50%;
    margin: 0 auto;
  }
  .blog .row {
    flex-direction: column;
  }
  .section .blogs .blog img {
    width: 50%;
    height: 50%;
    margin-bottom: 1rem;
  }
}
@media screen and (max-width: 1050px) {
  .tweets-wrapper {
    flex-wrap: wrap;
  }
  .col-md-4 {
    width: 100%;
  }
}
@media screen and (min-width: 1088px) {
  .section.is-medium {
    padding: 3rem 1.5rem;
  }
  .navbar-dropdown .navbar-item.active::before {
    content: '';
    position: absolute;
    left: 8px;
    border-left: 6px solid var(--c-primary);
    border-top: 4px solid transparent;
    border-bottom: 4px solid transparent;
  }
  .navbar-item.is-secondary, .navbar-link {
    border-bottom: 2px solid transparent;
  }
  .navbar-item.is-secondary.active {
    border-bottom-color: var(--c-primary);
  }  
}
@media (min-width: 720px) and (max-width: 1024px) {
  .section.has-sidebar {
    margin-left: 16.4rem;
  }
}
@media (min-width: 1024px) {
  .section.has-sidebar {
    margin-left: 20rem;
  }
  .sidebar {
    width: 20rem;
  }
}
.navbar-start, .sidebar-close, .navbar-item.is-hidden-desktop.is-hidden-tablet {
  display: none;
}
@media (max-width: 720px) {
  .navbar-start, .sidebar-close, .navbar-item.is-hidden-desktop.is-hidden-tablet {
    display: flex;
  }
  .sidebar {
    transform: translateX(-100%);
  }
}
/* active navbar items */
.navbar-dropdown .navbar-item.active, .navbar-item.is-secondary.active {
  color: var(--c-primary);
}
.navbar-item.is-secondary {
  padding: .25rem 0;
  margin: 0 .5rem;
}

